# dpsn-rust

./: .gitignore  Cargo.toml  DPSN_Research_Paper.md  README.md  RECURRENT_DPSN_DESIGN.md  create_test_parquet.py  dpsn_autoconfig.yaml  medium_recurrent_test.yaml  parquet_test_config.yaml
.github/workflows/: ci.yml  release.yml
.opencode/plugin/: boolean-validator.ts
configs/: burn_dataset_example.yaml  burn_dataset_fineweb.yaml  dpsn_1.2b.yaml  dpsn_500m.yaml  dpsn_500m_full.yaml  dpsn_500m_hierarchical.yaml  dpsn_custom.yaml  tiny_shakespeare_hierarchical.yaml  tiny_shakespeare_small.yaml
src/: lib.rs  main.rs
src/config/: device.rs  mod.rs
src/data/: batcher.rs  dataset.rs  mod.rs  prefetcher.rs  tokenizer.rs
src/inference/: generator.rs  mod.rs
src/model/: config.rs  dpsn.rs  execution_engine.rs  hierarchical_router.rs  mod.rs  offloaded_dpsn.rs  offloaded_pool.rs  parameter_pool.rs  router.rs  step_embedding.rs
src/training/: checkpoint.rs  curriculum.rs  mod.rs  offloaded_trainer.rs  trainer.rs
